--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,16 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+
+# database
+*.db
+*.db-journal
+/prisma/migrations
+
+# uploads
+/public/static/uploads/*
+!/public/static/uploads/.gitkeep
 
 # vercel
 .vercel
