--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.19.0",
     "bcryptjs": "^3.0.3",
+    "drizzle-kit": "^0.31.7",
+    "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "uuid": "^13.0.0"
